add img icon and title rename and descrption

--- a/index.html
+++ b/index.html
@@ -7,24 +7,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
         name="description"
-        content="Web site created using create-react-app"
+        content="Web site created using HTML CSS JS, a partir de um chamado de uma api publica, nesse projeto eu clono a interface dinamica do WhatssApp web, fazendo com que voce possa mandar mensgem em um grupo, ou até mesmo de forma privada, como se fosse altamente criptografado de ponta a ponta"
     />
+    <link rel="shortcut icon" href="img/iconWEB.png"  sizes="180x180">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="style.css">
-    <title>React App</title>
+    <title>WhatssApp Web</title>
     </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div class="boxModal noneDisplay">
-    <div class="login-box">
-        <form>
-            <label for="username">Usuário:</label>
-            <input type="text" id="username" name="username" placeholder="Insira seu nome de usuário">
-            <a value="Entrar" onclick="entrarNaSala()" href="index.html"> Entrar </a> 
-        </form>
-    </div>    
-  </div>  
+ 
 
 <div id="root">
         <div class="App">
